<resources>
    <string name="app_name">TummyFit</string>
    <string name="set_up_your_profile">Set Up your profile</string>
    <string name="create_an_account_so_you_can_try_the_product_s">Create an account so you can try the product’s</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_your_account">Login your account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="error_field_empty">Field cannot be empty!</string>
    <string name="email_invalid_format">Email format is invalid</string>
    <string name="password_invalid_format">Password less than 5 characters</string>
    <string name="username_invalid_format">Username less than 5 characters</string>
    <string name="menu">Menu</string>
    <string name="today_meals">Today Meal\'s</string>
    <string name="would_you_try_it">Would you try it?</string>
    <string name="per_day">per day</string>
    <string name="kcal">kcal</string>
    <string name="height">Height</string>
    <string name="ibm_score">IBM Score</string>
    <string name="weight">Weight</string>
    <string name="recipes">Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="water_intake">Water Intake</string>
    <string name="join_now">Join Now</string>
    <string name="skip">Skip</string>
    <string name="kg">kg</string>
    <string name="complete_your_account">Complete your Account</string>
    <string name="desc1_profile_setup">to ensure that the recommendation we made for you are correct, please fill this form</string>
    <string name="title_menu1">get your meal recommendations and fulfill your daily needs with the easiest way</string>
    <string name="title_menu2">more than 1000+ healthy Recipes for you to try Everyday!</string>
    <string name="title_menu3">tracks your daily water intake to keep you hydrated</string>
    <string name="cm">cm</string>
    <string name="cm_template">%1$s cm</string>
    <string name="kg_template">%1$s kg</string>
    <string name="kcal_template">%1$s kcal</string>
    <string name="ml_template">%1$s ml</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="purpose">Purpose</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="page_profile_setup">1/2</string>
    <string name="page2_profile_setup">2/2</string>
    <string name="next">Next</string>
    <string name="help_us">Help us know ur preferences</string>
    <string name="desc2_profile_setup">mark the categories that suit you</string>
    <string name="submit">Submit</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="glutten_free">Glutten Free</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="appetizer">Appetizer</string>
    <string name="halal">Halal</string>
    <string name="main_dish">Main dish</string>
    <string name="perfect_match">Perfect Match</string>
    <string name="what_do_you_want_to_eat_today">What do you want to eat today?</string>
    <string name="search_meals">Search meals</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="sunday">Sun</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="generate_groceries_list">Generate Groceries List</string>
    <string name="update_data_profile">Update data Profile</string>
    <string name="fat_g">fat/g</string>
    <string name="protein_g">protein/g</string>
    <string name="carbo_g">carbo/g</string>
    <string name="ready_in">Ready in</string>
    <string name="instructions">Instructions</string>
    <string name="_183cm">183cm</string>
    <string name="_19_3">19.3</string>
    <string name="_58kg">58kg</string>
    <string name="minutes">30</string>
    <string name="favorite">Favorite</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="daily_meals_nrecommendation">Daily Meals\nRecommendation</string>
    <string name="your_food_preferences">Your Food Preferences</string>
    <string name="your_data_profile">Your Data Profile</string>
    <string name="main_course">main course</string>
    <string name="appetizer_lower">appetizer</string>
    <string name="side_dish">side dish</string>
    <string name="salad">salad</string>
    <string name="condiment">condiment</string>
    <string name="sauce">sauce</string>
    <string name="soup">soup</string>
    <string name="minute">Minute</string>
    <string name="grocery_list">Grocery List</string>
    <string name="search_not_found">No results found\nWe couldnt find meals based on your search</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="empty_favorite">There\'s No Favorite Meals\nClick ☆ to add Meals In Favorites</string>
    <string name="empty_history">There\'s no history of daily drinkings</string>
    <string name="new_password">New Password</string>
    <string name="custom">Custom</string>
    <string name="_250_ml">250 ml</string>
    <string name="_200_ml">200 ml</string>
    <string name="_150_ml">150 ml</string>
    <string name="_100_ml">100 ml</string>
    <string name="_50_ml">50 ml</string>
    <string name="remaining">Remaining</string>
    <string name="target">Target</string>
    <string name="add_water">Add water</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="enter_custom_input">Enter Custom Input</string>
    <string name="history">history</string>
    <string name="fast_meals">Fast Meals Deserve</string>
    <string name="cheap_meals">Cheap Meals</string>
    <string name="halal_meals">Halal Meals</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="meals_recommendations">Meals Recommendations</string>
    <string-array name="purpose_item">
        <item>Maintain weight</item>
        <item>Weight loss</item>
    </string-array>
    <string-array name="daily_activity_item">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Extra active</item>
    </string-array>
</resources>