<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.mealsrecommend.MealsRecommendFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/daily_meals_nrecommendation"
        android:textAlignment="textStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_day"
        style="@style/Widget.Material3.ChipGroup"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/sv_meals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recommend"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sun"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sunday"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_mon"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/monday"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tue"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tuesday"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wed"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/wednesday"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_thu"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/thursday"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_fri"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/friday"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sat"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/saturday"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_meals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chip_group_day"
        app:layout_constraintTop_toTopOf="@id/chip_group_day">

        <include
            android:id="@+id/list_meals_recommend"
            layout="@layout/list_meals_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>